Fix tenant row images height on mobile

--- a/front-gateway/src/components/Tenants/TenantRow/TenantRow.scss
+++ b/front-gateway/src/components/Tenants/TenantRow/TenantRow.scss
@@ -42,6 +42,7 @@
     width: 40px;
 
     @media (max-width: $screen-xs-max) {
+      height: 30px;
       width: 30px;
     }
   }
